Fix T53583: Crash when instancing a group with an armature

There is still a crash that you get because the draw manager needs to
handle duplis differently.

But the initial assert caused by this particular file is now fixed.